<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match"
    android:orientation="vertical"
    tools:context=".ui.main.discovery.DiscoveryFragment">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bgColorPrimary"
        app:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/font_16"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/discovery"
            android:textColor="@color/textColorPrimary" />

        <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/content_description"
            android:padding="11dp"
            android:src="@drawable/ic_add_black_24dp"
            app:tint="@color/textColorPrimary" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/content_description"
            android:padding="13dp"
            android:src="@drawable/ic_search_black_24dp"
            app:tint="@color/textColorPrimary" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        style="@style/match">

        <FrameLayout style="@style/match">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv"
                style="@style/match">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.zhpan.bannerview.BannerViewPager
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        app:bvp_interval="5000"
                        app:bvp_page_style="multi_page_scale"
                        app:bvp_round_corner="5dp"
                        app:layout_constraintDimensionRatio="h,16:7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvHotWordTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/everyone_search"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/banner"
                        tools:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHotWord"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvHotWordTitle"
                        app:spanCount="3"
                        tools:listitem="@layout/item_hot_word" />

                    <TextView
                        android:id="@+id/tvFrequently"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/frequently_website"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rvHotWord"
                        tools:visibility="visible" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/tagFlowLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFrequently"
                        app:max_select="1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <include
                android:id="@+id/reloadView"
                style="@style/match"
                layout="@layout/include_reload"
                android:visibility="gone" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>